# icarusp

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  Requisitos.md  docker-compose.yml  run.sh
backend/: .env  Cargo.toml  SomeFile.txt  classes.rs  diesel.toml
backend/migrations/2025-06-28-204501_create_vector_extension/: down.sql
backend/migrations/2025-06-28-204558_create_authors/: up.sql
backend/migrations/2025-06-28-204635_create_books/: up.sql
backend/migrations/2025-06-28-204701_create_books_authors/: down.sql  up.sql
backend/migrations/2025-06-28-205854_create_index_book_embedding/: down.sql  up.sql
backend/src/: classes.rs  classes_tests.rs  embedding.rs  lib.rs  main.rs  mod.rs  schema.rs
backend/src/classes/: classes.rs  mod.rs
backend/src/database/: initialization.rs  insertion.rs  mod.rs  query.rs
backend/src/embedding/: embedding.rs  embedding_test.rs  mod.rs
backend/src/models/: author.rs  book.rs  book_author.rs  mod.rs
backend/src/test/: integration_pipeline.rs
frontend/src/: App.svelte  app.css
frontend/src/lib/: api.ts  dashboard.svelte
frontend/src/routes/: dashboard.svelte
slides/final_presentation/: final_presentation.tex
slides/pitch/: Screencast from 2025-04-27 23-16-50.webm  pitch.tex
tutorial/: Untitled-2025-05-12-1702.excalidraw  tutorial_vector_database.md
