[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.11.0"
anyhow = "1.0.98"
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
clap = "4.5.39"
hf-hub = "0.4.2"
limbo = "0.0.20"
serde = "1.0.219"
serde_json = "1.0.140"
tokenizers = "0.21.1"
tokio = "1.45.1"
